TAG: qcreports_db-6-0-6-3
TAG: qcreports_db-6-0-8-1
DATE: 10/13/2016
STAFF: lec
CHANGES: 
TR12427/Disease Ontology (DO)
1) qcr.shtml

TAG: qcreports_db-6-0-6-2
TAG: qcreports_db-6-0-6-1
DATE: 09/08/2016, 09/13/2016
STAFF: lec
CHANGES: 
1) TR12222/expects only one delimiter, but *any* delimiter may be used in inferredFrom field
2) TR12349/TR12345/gone-to & more/GO_Noctua/GPAD
obsolete:
mgd/MRK_InterimByDate.sql
mgd/MRK_GORCA.py
weekly/GO_eco_multipleEvidence.py
new:
mgd/GO_GPI_verify.py
modify:
qcr.shtml
3) TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
_Marker_Status_key in (1,3) changed to = 1 
_Marker_Status_key not in (1,3) changed to = 2 
_Marker_Status_key != 2 changed to = 1
'interim' comment removed

TAG: qcreports_db-6-5-0-3
DATE: 08/31/2016
STAFF: kstone
CHANGES: changed ftp url
qcr.html changed to qcr.shtml
includes directory added

TAG: qcreports_db-6-0-6-?
DATE: 08/30/2016
STAFF: sc
CHANGES:TR12922
1) Added ALL_OMIMNoMP.rpt

TAG: qcreports_db-?
DATE: 08/24/2016
STAFF: kstone
CHANGES: changed ftp url
qcr.html changed to qcr.shtml

TAG: qcreports_db-6-0-5-2
DATE: 08/22/2016
STAFF: sc
CHANGES:
1) fixed typo in qcr.html. Space removed in ALL_ExpressedSeq.rpt URL.

TAG: qcreports_db-6-0-5-?
DATE: 07/25/2016
STAFF: lec
CHANGES: 
1) TR12222/expects only one delimiter, but *any* delimiter may be used in inferredFrom field

TAG: qcreports_db-6-0-4-6
DATE: 07/15/2016
STAFF: sc
CHANGES: TR11942 new reports:
1) monthly/ALL_ExpressedSeq.py
2) weekly/ALL_NoSubType.py

TAG: qcreports_db-6-0-4-5
DATE: 06/27/2016
STAFF: lec
CHANGES:
1) fix qcr.html/goload links

TAG: qcreports_db-6-0-4-4
DATE: 06/06/2016
STAFF: lec
CHANGES:
1) fix/stage : GXD_SameStructure.py

TAG: qcreports_db-6-0-4-3
TAG: qcreports_db-6-0-4-2
TAG: qcreports_db-6-0-4-1
DATE: 05/04/2016, 05/12/2016
STAFF: lec
CHANGES:
1) TR12223/gxd anatomy II : merge to trunk

TAG: qcreports_db-6-0-3-1
DATE: 04/07/2016
STAFF: lec
CHANGES:
1) TR12314/ALL_WithdrawnMarker.sql

1) needed out join to mcl1