@@ -1,3 +1,11 @@
+TAG: qcreports_db-6-0-8-?
+DATE: 10/19/2016
+STAFF: lec
+CHANGES: 
+TR12427/Disease Ontology (DO)
+TR11083/NOM_Marker obsolete/merged with MRK_Marker
+mgd/MRK_QTL.py
+
 TAG: qcreports_db-6-0-6-3
 TAG: qcreports_db-6-0-8-1
 DATE: 10/13/2016
